[package]
name = "k4a-sys"
version = "0.2.0"
authors = ["Amédée d'Aboville <amedee.daboville@gmail.com>"]
edition = "2018"
description = "The Azure K4A API bindgen-ed to Rust."
repository = "https://gitlab.com/amedeedabo/k4a-sys"
license = "expat"
gitlab = {repository = "amedeedabo/k4a-sys", branch = "master" }

[build-dependencies]
bindgen = "0.52.0"
